--- a/yaml_templates/params_SJ110_100X.yaml
+++ b/yaml_templates/params_SJ110_100X.yaml
@@ -54,6 +54,43 @@ channel_width_pad: 10
 # threshold for calling empty/full channels in ChannelPicker
 channel_picking_threshold: 0.97
 
+### segmentaion and lineage creation parameters
+# the radius of the disk that is used in the first morphological opening
+# unit is pixels
+first_opening_size: 3
+
+# pixels closer than this distance to the edge of a cell will be zeroed.
+# unit is pixels
+distance_threshold: 3
+
+# the radius, in pixels, of the size of the disk that is used in the second morphological
+# unit is pixels
+second_opening_size: 2
+
+# markers for potential cells smaller than this area will be zeroed
+# unit is pixels^2
+min_object_size: 25
+
+# amount of frames after which a cell is dropped because no new regions linked to it
+lost_cell_time: 3
+
+# boolean for printing out segmentations and lineages over time. This is extremly slow,
+# so only do this a few channels and shorter times. Good for debugging.
+print_lineages: False
+
+# parameters for the minimum and maximum a region can when linking new regions to
+# existing potential cell
+# Unit is ratio
+max_growth_length: 1.2
+min_growth_length: 0.95
+max_growth_area: 1.2
+min_growth_area: 0.95
+
+# regions only less than this value down the channel from the closed end will be considered
+# to start potential new cells. Does not apply to daughters
+# unit is pixels
+new_cell_y_cutoff: 200
+
 ### movie parameters ###########################################################
 # set a subdirectory name to contain movies for this experiment
 movie_directory: 'movies/'
