--- a/yaml_templates/params_SJ110_100X.yaml
+++ b/yaml_templates/params_SJ110_100X.yaml
@@ -1,29 +1,29 @@
 # Refer to the "Setting up .yaml file" in the git repository wiki
 # Name your experiment
-experiment_name: 'exp_name'
+experiment_name: '20170518_FS103_DnaN-yPet_glu_25p_200ms_SJW104003'
 
 # root directory for the experiment. Must end in "/"
-experiment_directory: '/path/to/exp/folder/'
+experiment_directory: '/Users/Fangwei/Documents/Adder/Analysis/20170519_FS103_DnaN_yPet_glu_25p_200ms_SJW104_2min/'
 
 # subdirectory for the original TIFs. This should be in your experiment_directory
-image_directory: 'TIFF/'
+image_directory: 'rawdata/TIFF_test/'
 
 # subdirectory for storing analysis data. This should be in your experiment_directory
-analysis_directory: 'analysis/'
+analysis_directory: 'analysis_test/'
 
 # indicate where TIFFs came from. This changes which function is used to
 # retrieve metadata. Choices are 'elements' or 'nd2ToTIFF'
-TIFF_source: 'nd2ToTIFF'
+TIFF_source: 'elements'
 
 # indicate if you want to save out to TIFFs, or use HDF5 to save image data.
 # HDF5 is required for any real time analysis. Choises are 'TIFF' or 'HDF5'
 output: 'TIFF' # 'HDF5'
 
 # nominal time between indexes for a single FOV used during image acquisition
-seconds_per_time_index: 60
+seconds_per_time_index: 120
 
 # indicate which color channel (plane) has the phase images. Used by channel picker
-phase_plane: 'c1'
+phase_plane: 'c2'
 
 # conversion factor from pixels to microns
 # use 0.065 for 100X, use 0.108 for 60X
@@ -32,13 +32,13 @@ pxl2um: 0.065
 # image_orientation: set to "up" if growth pushes cells up
 # set to "down" if growth pushes cells down
 # set to 'auto' if there is a mix
-image_orientation: 'auto'
+image_orientation: 'down'
 
 # constants for tuning the algorithm (units are pixels)
 # channel_width is simply the width of the channels in pixels
 # is used to set the middle of the size range for detecting
 # intensity peaks corresponding to individual channels.
-channel_width: 24
+channel_width: 16
 
 # channel_separation is used to judge the closeness of channels
 # to the edges of the image
