--- a/yaml_templates/params_SJ110_100X.yaml
+++ b/yaml_templates/params_SJ110_100X.yaml
@@ -23,7 +23,7 @@ output: 'TIFF' # 'HDF5'
 seconds_per_time_index: 120
 
 # indicate which color channel (plane) has the phase images. Used by channel picker
-phase_plane: 'c2'
+phase_plane: 'c1'
 
 # conversion factor from pixels to microns
 # use 0.065 for 100X, use 0.108 for 60X
@@ -58,9 +58,15 @@ channel_width_pad: 10
 channel_picking_threshold: 0.97
 
 ### segmentaion and lineage creation parameters
+# threshold used in readjusting the OTSU method (the final contour determination used DEFAULT OTSU method)
+OTSU_threshold: 1.2
+
 # the radius of the disk that is used in the first morphological opening
 # unit is pixels
-first_opening_size: 3
+first_opening_size: 2
+
+# find indexes of rows where sum is less than 1/line_profile_threshold of this value.
+line_profile_threshold: 5
 
 # pixels closer than this distance to the edge of a cell will be zeroed.
 # unit is pixels
@@ -68,7 +74,7 @@ distance_threshold: 3
 
 # the radius, in pixels, of the size of the disk that is used in the second morphological
 # unit is pixels
-second_opening_size: 2
+second_opening_size: 1
 
 # markers for potential cells smaller than this area will be zeroed
 # unit is pixels^2
