--- a/scripts/roles/overlay_attribute_time.yaml
+++ b/scripts/roles/overlay_attribute_time.yaml
@@ -1,3 +1,81 @@
+labels:
+  - "phase contrast only"
+  - "+ 488 ex"
+  - "+ 488 ex + 405 ex (100 ms)"
+#    - "+ 488 ex + 405 ex (200 ms) (problem)"
+  - "+ 488 ex + 405 ex (200 ms)"
+colors:
+  - darkgreen
+  - darkblue
+  - darkorange
+#    - magenta
+  - darkred
+
+attributes:
+  sd:
+    label: "$S_d$ $[\\mu m]$"
+    scale: 1
+  sb:
+    label: "$S_b$ $[\\mu m]$"
+    scale: 1
+  delta:
+    label: "$\\Delta_d$ $[\\mu m]$"
+    scale: 1
+  width_um:
+    label: "width $[\\mu m]$"
+    scale: 1
+  tau:
+    label: "$\\tau$ $[min]$"
+    scale: 1
+  times_min:
+    label: "time [h]"
+    scale: 0.017
+  growth_rate:
+    label: "$\\lambda$ $[h^{-1}]$"
+    scale: 60.
+
+plot_attribute_distribution_args:
+  general:
+      lw: 0.5
+      ms: 2
+      aratio: 2
+  plots:
+#    growth_rate.png:
+#      attr: growth_rate
+#      bin_width: 0.1
+#      units_dx: 0.5
+#      xlo:  0.
+#    size_division.png:
+#      attr: sd
+#      bin_width: 0.5
+#      units_dx: 2.0
+#      xlo:  0.
+#      xhi:  14
+#    size_birth.png:
+#      attr: sb
+#      bin_width: 0.25
+#      units_dx: 1.0
+#      xlo:  0.
+#      xhi:  7.
+#    size_added.png:
+#      attr: delta
+#      bin_width: 0.25
+#      units_dx: 1.0
+#      xlo:  0.
+#      xhi:  7.
+    width.png:
+      attr: width_um
+      bin_width: 0.01
+      units_dx: 0.1
+      xlo:  0.4
+      xhi:  0.8
+#    tau.png:
+#      attr: tau
+#      bin_width: 10
+#      units_dx: 50
+#      xlo:  0.
+#      xhi:  null
+
 plot_attribute_time_args:
   offsets:
     - 0
@@ -5,41 +83,19 @@ plot_attribute_time_args:
     - 664
 #    - 1026
     - 1094
-  labels:
-    - "phase contrast only"
-    - "+ 488 ex"
-    - "+ 488 ex + 405 ex (100 ms)"
-#    - "+ 488 ex + 405 ex (200 ms) (problem)"
-    - "+ 488 ex + 405 ex (200 ms)"
-  colors:
-    - darkgreen
-    - darkblue
-    - darkorange
-  #    - magenta
-    - darkred
-  attributes:
-    sd:
-      label: "$S_d$ $[min]$"
-      scale: 1
-    times_min:
-      label: "time [h]"
-      scale: 0.017
-    growth_rate:
-      label: "$\\lambda$ $[h^{-1}]$"
-      scale: 60.
+  general:
+      lw: 0.5
+      ms: 1
+      aratio: 4
+      scatter_max_pts: 1000
+      units_dt: 1
+      tlo: 0.
   plots:
     growthrate_vs_tb.pdf:
       attr: growth_rate
-      lw: 0.5
-      ms: 1
-      scatter_max_pts: 1000
-      aratio: 4
       bin_width: 0.5
-      units_dx: 1
       units_dy: 0.1
       units_dn: 100
-      xformat: '{x:.0f}'
-      tlo: 0.
       ylims: [0., 1.2]
 #    sd_vs_times.pdf:
 #      attr: sd
